# tauri-plugin-escpos

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  package.json
android/: build.gradle.kts  proguard-rules.pro
android/libs/: droidplug-release.aar
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: EscposPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/app/: package.json  tailwind.config.js  vite.config.ts.timestamp-1721674002932-7c7b06f746937.mjs
examples/app/src/: App.vue  main.ts  styles.css
examples/app/src-tauri/: Cargo.toml  tauri.conf.json
examples/app/src-tauri/capabilities/: default.json
examples/app/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: ExamplePlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: check_store_state.toml  disconect.toml  disconnect.toml  is_ble_enabled.toml  permissions_ok.toml  permissions_status.toml  request_ble_permission.toml
permissions/schemas/: schema.json
src/: commands.rs  debug.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  permission.rs
src/java/: btleplug_plugin.rs  mod.rs  utils.rs
