[package]
name = "tauri-plugin-escpos"
version = "0.0.0"
authors = ["lnxdxtf"]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-escpos"

[dependencies]
tauri = { version = "2.0.0-beta.22" }
serde = "1.0"
thiserror = "1.0"
# eco_print = { git = "https://github.com/lnxdxtf/eco_print.git", branch = "main" }
eco_print = { path = "X:/dev/projects/eco_print", features = [
    "android",
    "ble",
    "usb",
] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19.0"
once_cell = "1.19.0"
jni-utils = "0.1.1"


[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.17", features = ["build"] }
