[package]
name = "tauri-plugin-escpos"
version = "0.0.0"
authors = ["lnxdxtf"]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-escpos"

[dependencies]
tauri = { version = "2.0.0-beta.22" }
serde = "1.0"
thiserror = "1.0"
tokio = "1.39.2"

# eco_print = { git = "https://github.com/lnxdxtf/eco_print.git", branch = "main" }
eco_print = { path = "X:/dev/projects/eco_print", features = [
    "android",
    "ble",
    "usb",
] }
log = { version = "0.4.22", optional = true }


[target.'cfg(target_os = "android")'.dependencies]
android_logger = { version = "0.14.1", optional = true }
jni = "0.19.0"


[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.17", features = ["build"] }


[features]
default = ["debug"]
debug = ["log", "android_logger"]
