[package]
name = "tauri-plugin-escpos"
version = "0.0.0"
authors = ["lnxdxtf"]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-escpos"

[dependencies]
tauri = { version = "2.0.0-beta.22" }
serde = "1.0"
thiserror = "1.0"
tokio = "1.39.2"
log = "0.4.22"

# eco_print = { git = "https://github.com/lnxdxtf/eco_print.git", branch = "main" }
eco_print = { path = "X:/dev/projects/eco_print", features = [
    "android",
    "ble",
    "usb",
] }


[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"
jni = "0.19.0"


[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.17", features = ["build"] }


[features]
default = ["ble"]
ble = []
usb = []
